--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="invalidEmailFormat">Invalid email format!</string>
     <string name="buttonLogout">Logout</string>
     <string name="add">Add</string>
+    <string name="season">Season</string>
+    <string name="summary">Summary</string>
+    <string name="welcome">Welcome</string>
     <string name="annualSummaries">Annual summaries</string>
     <string name="numberTransactions">Number of transactions added during the session:</string>
     <string-array name="currency">
